endpoint delete user
